# ecommerce-recsys-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/commit/: SKILL.md
.claude/skills/notion-kanban/: SKILL.md
.claude/skills/pr-description/: SKILL.md
data/: raw.dvc
docs/internal/: mlflow_boas_praticas.md  pipeline_demo_2026-06-30.ipynb  planejamento_inicial.md  tech_challenge.md
docs/internal/mlflow/: 01_configuracao_mlflow.md  02_mlflow_boas_praticas.md  03_smoke_test_runs.py
notebooks/: 01_eda.ipynb  02_experiments.ipynb
src/: config.py  logging_config.py
src/api/: app.py  middleware.py
src/data/: __init__.py  loader.py  preprocessor.py  schema.py  split.py
src/metrics/: __init__.py  business.py  ranking.py
src/models/: __init__.py  base.py  factory.py  mlp.py  popularity.py  svd.py
src/tracking/: __init__.py  mlflow_utils.py
tests/: test_api.py  test_config.py  test_data.py  test_logging_config.py  test_metrics.py  test_models.py  test_preprocessor.py  test_split.py  test_tracking.py
tests/schema/: test_schema.py
